welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:11: error: reassignment to val
    return posfinale=true
                    ^ColumnByColumn:11: warning: enclosing method rep has result type Unit: return value discarded
    return posfinale=true
    ^